[package]
name = "acta"
version.workspace = true
edition = "2024"
description = "Make Tracing Great Again."
repository = "https://github.com/Sn0wo2/acta"
license = "Apache-2.0"
keywords = ["tracing", "logging", "formatting", "colors", "theme"]
categories = ["development-tools::debugging", "development-tools::profiling"]
exclude = [".github/", ".idea/", "img.png"]

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
acta-build = { path = "crates/acta-build", version = "0.0.0" }

[features]
default = ["unicode", "file"]
async = ["custom-async", "native-async"]
custom-async = ["dep:tokio"]
native-async = ["file"]
file = ["dep:tracing-appender"]
compress = ["dep:flate2"]
serde = ["dep:serde"]
unicode = []
nerd = ["dep:nerd-font-symbols"]

[dependencies]
smart-default = "0.7"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = { version = "1.1.9", default-features = false, features = [
    "miniz_oxide",
], optional = true }
owo-colors = "4.3.0"
serde = { version = "1", features = ["derive"], optional = true }
tracing = "0.1"
tracing-log = "0.2"
smallvec = "1"
arrayvec = "0.7"
tracing-appender = { version = "0.2", optional = true }
nerd-font-symbols = { version = "0.3.0", optional = true }
tokio = { version = "1", default-features = false, features = [
    "io-std",
    "io-util",
    "rt",
    "sync",
], optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
    "ansi",
    "std",
] }

[build-dependencies]
acta-build = { workspace = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
unreachable_pub = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
non_ascii_idents = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
elided_lifetimes_in_paths = "warn"

[lints.clippy]
all = "warn"
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"
wildcard_imports = "warn"
str_to_string = "warn"
mem_forget = "warn"
unwrap_used = "warn"
expect_used = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"
