[package]
name = "acta"
version.workspace = true
edition = "2024"
description = "Make Tracing Great Again."
repository = "https://github.com/Sn0wo2/acta"
license = "Apache-2.0"
keywords = ["tracing", "logging", "formatting", "colors", "theme"]
categories = ["development-tools::debugging", "development-tools::profiling"]
exclude = [".github/", ".idea/", "img.png"]

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.1"

[workspace.dependencies]
acta-build = { path = "crates/acta-build", version = "0.1.1" }

[features]
default = ["unicode", "file"]
async = ["custom-async", "native-async"]
custom-async = ["dep:tokio"]
native-async = ["file"]
file = ["dep:tracing-appender"]
compress = ["dep:flate2"]
serde = ["dep:serde"]
unicode = []
nerd = ["dep:nerd-font-symbols"]

[dependencies]
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = { version = "1.1.9", default-features = false, features = [
    "miniz_oxide",
], optional = true }
owo-colors = "4.3.0"
serde = { version = "1", features = ["derive"], optional = true }
tracing = "0.1"
tracing-log = "0.2"
smallvec = "1"
arrayvec = "0.7"
tracing-appender = { version = "0.2", optional = true }
nerd-font-symbols = { version = "0.3.0", optional = true }
tokio = { version = "1", default-features = false, features = [
    "io-std",
    "io-util",
    "rt",
    "sync",
], optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
    "ansi",
    "std",
] }
smart-default = "0.7.1"
supports-color = "3"
ansi_colours = "1.2"
anstyle-lossy = "1.1"
anstyle = "1"
arc-swap = "1.7.1"
derive_more = { version = "1.0.0", features = ["full"] }
tap = "1.0.1"
compact_str = { version = "0.9", features = ["serde"] }

[build-dependencies]
acta-build = { workspace = true }

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
unreachable_pub = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
non_ascii_idents = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
elided_lifetimes_in_paths = "warn"

[lints.clippy]
all = "warn"
as_ptr_cast_mut = "warn"
assigning_clones = "warn"
branches_sharing_code = "warn"
cast_lossless = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collapsible_else_if = "warn"
collection_is_never_read = "warn"
comparison_chain = "warn"
dbg_macro = "warn"
default_trait_access = "warn"
elidable_lifetime_names = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
expect_used = "warn"
filter_map_bool_then = "warn"
filter_map_next = "warn"
get_unwrap = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
inline_asm_x86_att_syntax = "warn"
ip_constant = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
literal_string_with_formatting_args = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_ilog2 = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
map_unwrap_or = "warn"
match_wild_err_arm = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_const_for_fn = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_strings = "warn"
needless_type_cast = "warn"
nonminimal_bool = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
option_if_let_else = "warn"
overly_complex_bool_expr = "warn"
panic = "warn"
panic_in_result_fn = "warn"
print_stderr = "warn"
print_stdout = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ptr_offset_by_literal = "warn"
pub_use = "warn"
pub_without_shorthand = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_pub_crate = "warn"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_length_and_capacity = "warn"
self_named_module_files = "warn"
set_contains_or_insert = "warn"
significant_drop_tightening = "warn"
single_call_fn = "warn"
single_char_pattern = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
struct_field_names = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
unchecked_time_subtraction = "warn"
unimplemented = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_semicolon = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_trailing_comma = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unreachable = "warn"
unreadable_literal = "warn"
unseparated_literal_suffix = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_self = "warn"
unwrap_used = "warn"
use_debug = "warn"
use_self = "warn"
used_underscore_items = "warn"
useless_let_if_seq = "warn"
verbose_bit_mask = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"
