[package]
name = "acta-debug"
version.workspace = true
edition = "2024"
description = "Debug suite and demo binary for acta"
repository = "https://github.com/Sn0wo2/acta"
license = "MIT"

[dependencies]
acta = { path = "../..", features = ["async", "file", "compress", "serde", "unicode", "nerd"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry", "ansi", "std"] }
